# log-processing-rust

./: Cargo.toml  README.md
src/: failed_login.rs  html_report.rs  lib.rs  log_file.rs
