[package]
name = "log-processing-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "failed-logins"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
flate2 = "1.0.25"
itertools = "0.10.5"
nom = "7.1.3"
tar = "0.4.38"
